modify the action in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,7 @@
     }
   ],
   "share_target": {
-    "action": "/",
+    "action": "index.html",
     "method": "GET",
     "params": {
       "title": "title",
